deploy/overlays/stg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ui
    labels:
        app: ui
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ui
    template:
        metadata:
            labels:
                app: ui
        spec:
            containers:
                - name: ui
                  image: europe-west2-docker.pkg.dev/portfolio-463406/docker-repository/activity_tracker_charity
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: runtime-config
                        mountPath: /usr/share/nginx/html/config.json
                        subPath: config.json
                        readOnly: true
            volumes:
                - name: runtime-config
                  configMap:
                      name: ui-runtime-config
            imagePullSecrets:
                - name: gcp-pull-secret
