deploy/overlays/stg/security.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
    name: ui-protected
spec:
    targetRefs:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
          name: stg-roam-ui
    extAuth:
        headersToExtAuth:
            - Cookie
            - Authorization
            - Host
            - X-Forwarded-Host
            - X-Forwarded-Proto
            - X-Forwarded-Uri
        http:
            backendRefs:
                - name: oauth2-proxy
                  namespace: stg-auth
                  port: 4180
            headersToBackend:
                - X-Auth-Request-User
                - X-Auth-Request-Email
                - X-Auth-Request-Groups
                - Authorization
